# claude-eval-harness

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
evals/fixtures/netsuite/: generate_fixtures.py  sample_gl_export.xls  sample_malformed.xls  sample_with_metadata.xls
evals/fixtures/traces/: wrong_header_row.json
evals/suites/: netsuite_saved_search.yaml
examples/: README.md  minimal.yaml
runs/: baseline-opus-4-7.json  baseline-sonnet-4-6.json
src/claude_eval_harness/: __init__.py  case.py  cli.py  client.py  config.py  diff.py  runner.py  storage.py  target.py  trace.py
src/claude_eval_harness/graders/: __init__.py  base.py  contains.py  exact_match.py  llm_judge.py  structural.py
src/claude_eval_harness/reporters/: console.py
src/claude_eval_harness/targets/: netsuite_saved_search.py
tests/: conftest.py  test_graders.py  test_graders_contains.py  test_graders_llm_judge.py  test_graders_structural.py  test_runner.py
