[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-eval-harness"
version = "0.1.0"
description = "YAML-driven eval harness for Anthropic tool-use agents with regression diffing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Mohammed Wasif"}]
keywords = ["anthropic", "claude", "evals", "tool-use", "mcp", "regression-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
netsuite = [
    "netsuite-saved-search-mcp>=0.1.0",
]

[project.scripts]
harness = "claude_eval_harness.cli:main"

[project.urls]
Homepage = "https://github.com/maximizeGPT/claude-eval-harness"
Repository = "https://github.com/maximizeGPT/claude-eval-harness"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_eval_harness"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# The TestCase dataclass in case.py has an __init__ (via @dataclass), which
# pytest flags as uncollectable. It's not a test class; silence the warning.
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["claude_eval_harness"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]
